# shiny-barnacle

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  generate_backend_docx.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_batch_audit_tables.py
backend/: .env.example  requirements.txt
backend/app/: config.py  database.py  main.py  seed.py
backend/data/: shipments.json
backend/scripts/: generate_data.py
config/: default.yaml
dashboard/: package.json
data/: purchase_orders.json  sales_history.csv  suppliers.json  warehouse_inventory.json
data/invoices/: invoice_acme_2025_001.txt  invoice_globalchem_2025_002.txt  invoice_precision_2025_003.txt
data/stock_symbols/: nse_symbols.csv
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker
docs/: API_Documentation.md  Demo_Script.md  Deployment_Guide.md  Operyx_AI_Supply_Chain_PoC_Document.md  Project_Architecture.md  evaluation.md  k8s-runbook.md  operator-manual.md  security.md  url-ingestion.md
eval/: __init__.py
eval/datasets/: loader.py  sample_gold.json
eval/metrics/: __init__.py  core.py  field_scorers.py
eval/reports/: __init__.py  html_report.py  ingest_batch.json  language_analysis.json  language_analysis_preview20.json
eval/runners/: __init__.py  __main__.py  models.py  (+1 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
prompts/: CHANGELOG.md  manifest.yaml
scripts/: _ingest_limit20_longtimeout.py  analyze_languages.py  ingest_urls.py
src/: __init__.py
(+191 files in other folders)
