[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operyx-ai"
version = "0.1.0"
description = "Enterprise AI agent platform for call-to-trade intent extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "pypdf>=5.1.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
whisperx = [
    "whisperx",
    "torch",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
